...
        })}
      </View>

      {/* View selector */}
      <View style={programStyles(theme).viewSelector}>
        <TouchableOpacity
          testID="program-view-list"
          accessibilityLabel="List"
          style={[
            programStyles(theme).viewButton,
            activeTab === 0 && programStyles(theme).activeViewButton
          ]}
          onPress={() => setActiveTab(0)}
...
          >
            List
          </Text>
        </TouchableOpacity>

        <TouchableOpacity
          testID="program-view-timeline"
          accessibilityLabel="Timeline"
          style={[
            programStyles(theme).viewButton,
            activeTab === 1 && programStyles(theme).activeViewButton
          ]}
          onPress={() => setActiveTab(1)}
...
